# GA-Scheduling

./: .gitignore  CMakeLists.txt  GA.cpp  GA.h  NaiveGA.cpp  NaiveGA.h  README.md  SchGA.cpp  SchGA.h  genFlameGraph.sh  main.cpp  test_VS2.cpp  util.h  utill.cpp
Include/: Descriptor.h  GA.h  NaiveGA.h  SchGA.h  SearchEngine.h  TestGenerator.h  debug.h
Source/: Descriptor.cpp  GA.cpp  KD_tree.py  NaiveGA.cpp  SchGA.cpp  SearchEngine.cpp  TestGenerator.cpp  collision.cpp  collision.h  dubins.c  kd_tree.h  main.cpp  raw_kd.cpp
